--- a/rsi-cci-macd/code.ipynb
+++ b/rsi-cci-macd/code.ipynb
@@ -1224,8 +1224,7 @@
     "        return '-'\n",
     "\n",
     "\n",
-    "hist['signal'] = hist.apply(lambda row: signal(\n",
-    "    row['rsi'], row['macd-line'],row['cci']), axis=1)\n",
+    "hist['signal'] = hist.apply(lambda row: signal(row['rsi'], row['macd-line'],row['cci']), axis=1)\n",
     "\n",
     "hist\n"
    ]
