--- a/cci/code.ipynb
+++ b/cci/code.ipynb
@@ -476,7 +476,7 @@
     "    elif cci_past > 150 and cci_current < 150:\n",
     "        return 'sell'\n",
     "    else:\n",
-    "        return 'no signal'"
+    "        return 'neutral'"
    ]
   },
   {
@@ -958,7 +958,7 @@
     "        return 'buy'\n",
     "    elif signal=='sell' and (status_past=='hold' or status_past=='buy'):\n",
     "        return 'sell'\n",
-    "    elif signal=='no signal' and (status_past=='buy' or status_past=='hold'):\n",
+    "    elif signal=='neutral' and (status_past=='buy' or status_past=='hold'):\n",
     "        return 'hold'\n",
     "    elif status_past=='hold':\n",
     "        return 'hold'\n",
